<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Janas Chatkevicius as part of the Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it's your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2018 Janas Chatkevicius
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFBFC"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans_light"
        android:maxLines="1"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@id/text_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@id/text_title"
        app:layout_constraintRight_toRightOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/id_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/location"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/id_workingHours"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <TextView
        android:id="@+id/id_workingHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/time"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/workingHours"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/id_location"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <TextView
        android:id="@+id/id_contactInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/contactInfo"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_location" />

    <ImageView
        android:id="@+id/id_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_contactInfo"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>